# pytorch

./: test_detail.xml
aten/src/ATen/native/transformers/cuda/flash_attn/: flash_api.cpp  tensor_traits.h
test/cpp/aoti_standalone/: CMakeLists.txt  test_addmm_out.cpp  test_flash_attention.cpp  test_mm_out.cpp  test_scalar_tensor.cpp  test_slim_tensor.cpp  test_transpose_int.cpp  test_utils.h
test/inductor/: test_aot_inductor.py  test_aot_inductor_standalone.py
torch/csrc/inductor/aoti_standalone/: resize.h
torch/csrc/inductor/aoti_standalone/cpu/: resize.h  scalar_tensor.h  transpose_int.h
torch/csrc/inductor/aoti_standalone/cuda/: addmm_out.h  flash_attn.h  mm_out.h  scalar_tensor.h  transpose_int.h
torch/csrc/inductor/aoti_standalone/cuda/flash_attn/: flash_api.cpp  flash_api.h  static_switch.h
torch/standalone/: resize_template.h  scalar_tensor_template.h  transpose_int_template.h
torch/standalone/cpu/: resize_template.h
torch/standalone/cuda/: addmm_out.cu  addmm_out.h  flash_attn_template.h
torch/standalone/slim_tensor/: slim_tensor.h  storage.h  utils.h
torchgen/aoti/: fallback_ops.py
